add authentication mode to support both browser & mobile

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>File</title>
 
+	<link rel="icon" type="image/png" href="img/icon.png" />
     <link href="css/ionic.app.css" rel="stylesheet">
     
     <!-- ionic/angularjs js -->
