add tag maintenance, file and filelist model/controller

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title>File</title>
 
 	<link rel="icon" type="image/png" href="img/icon.png" />
+    <link href="lib/tagDirective/tag.css" rel="stylesheet">
     <link href="css/ionic.app.css" rel="stylesheet">
     
     <!-- ionic/angularjs js -->
